--- a/src/mod/applications/mod_hash/Makefile.am
+++ b/src/mod/applications/mod_hash/Makefile.am
@@ -8,7 +8,7 @@ mod_hash_la_DEPENDENCIES = $(ESL_DIR)/libesl.so
 mod_hash_la_SOURCES  = mod_hash.c
 mod_hash_la_CFLAGS   = $(AM_CFLAGS) -I$(ESL_DIR)/src/include
 mod_hash_la_LIBADD   = $(switch_builddir)/libfreeswitch.la
-mod_hash_la_LDFLAGS  = -avoid-version -module -no-undefined -shared -L$(ESL_DIR) -lesl
+mod_hash_la_LDFLAGS  = -avoid-version -module -no-undefined -shared -L$(ESL_DIR) -lesl -lm
 
 $(ESL_DIR)/libesl.so:
 	cd $(ESL_DIR) && $(MAKE) -j1
