--- a/src/mod/codecs/mod_bv/Makefile
+++ b/src/mod/codecs/mod_bv/Makefile
@@ -4,7 +4,9 @@ BV_DIR=$(switch_srcdir)/libs/broadvoice
 BV_BUILDDIR=$(switch_builddir)/libs/broadvoice
 LOCAL_CFLAGS=-I$(BV_BUILDDIR)/src -I$(BV_DIR)/src 
 BV_LA=$(BV_BUILDDIR)/src/.libs/libbroadvoice.la
-LOCAL_LIBADD=$(BV_LA)
+LOCAL_LIBADD=$(BV_LA) -lm
+LOCAL_LDFLAGS=-lm
+
 include $(BASE)/build/modmake.rules
 
 $(BV_LA): $(BV_DIR)/.update	
