--- a/configure.in
+++ b/configure.in
@@ -257,7 +257,7 @@ if test "x${ax_cv_c_compiler_vendor}"  =  "xsun" ; then
 elif test "x${ax_cv_c_compiler_vendor}" = "xgnu" ; then
     APR_ADDTO(SWITCH_AM_CFLAGS, -fPIC)
     APR_ADDTO(SWITCH_AM_CXXFLAGS, -fPIC)
-    APR_ADDTO(SWITCH_AM_CFLAGS, -Werror)
+    #APR_ADDTO(SWITCH_AM_CFLAGS, -Werror)
     if test "${enable_64}" = "yes"; then
 	case "$host" in
              *darwin12.*|*darwin11.*|*darwin10.*|*darwin9.*|*darwin8.*)
@@ -533,7 +533,7 @@ case "$host" in
 	APR_ADDTO([PLATFORM_CORE_LIBS], [-lcrypt -lrt])
     ;;
     *linux*)
-	APR_ADDTO([PLATFORM_CORE_LIBS], [-ldl -lcrypt -lrt])
+	APR_ADDTO([PLATFORM_CORE_LIBS], [-ldl -lcrypt -lrt -luuid -lz])
     ;;
 esac
 
@@ -1201,38 +1201,23 @@ ac_configure_args="$ac_configure_args CONFIGURE_CFLAGS='$CFLAGS' CONFIGURE_CXXFL
 #	--localstatedir='$localstatedir' --datadir='$datadir'"
 
 # Run configure in all the subdirs
-AC_CONFIG_SUBDIRS([libs/srtp])
 AC_CONFIG_SUBDIRS([libs/sqlite])
-if test "$enable_core_libedit_support" = "yes" ; then
-    AC_CONFIG_SUBDIRS([libs/libedit])
-fi
 
-AC_CONFIG_SUBDIRS([libs/pcre])
 AC_CONFIG_SUBDIRS([libs/apr])
 AC_CONFIG_SUBDIRS([libs/apr-util])
 AC_CONFIG_SUBDIRS([libs/ilbc])
-AC_CONFIG_SUBDIRS([libs/curl])
-AC_CONFIG_SUBDIRS([libs/iksemel])
-AC_CONFIG_SUBDIRS([libs/js/nsprpub])
-AC_CONFIG_SUBDIRS([libs/js])
-AC_CONFIG_SUBDIRS([libs/libdingaling])
-AC_CONFIG_SUBDIRS([libs/libsndfile])
 AC_CONFIG_SUBDIRS([libs/sofia-sip])
-AC_CONFIG_SUBDIRS([libs/speex])
-AC_CONFIG_SUBDIRS([libs/portaudio])
-AC_CONFIG_SUBDIRS([libs/openzap])
+if test "$ac_cv_use_system_curl" != "yes" ; then
+    AC_CONFIG_SUBDIRS([libs/curl])
+fi
 AC_CONFIG_SUBDIRS([libs/freetdm])
-AC_CONFIG_SUBDIRS([libs/unimrcp])
-AC_CONFIG_SUBDIRS([libs/tiff-4.0.2])
 AC_CONFIG_SUBDIRS([libs/spandsp])
 AC_CONFIG_SUBDIRS([libs/broadvoice])
 AC_CONFIG_SUBDIRS([libs/libg722_1])
-AC_CONFIG_SUBDIRS([libs/silk])
 AC_CONFIG_SUBDIRS([libs/libcodec2])
 if test "x${enable_zrtp}" = "xyes"; then
    AC_CONFIG_SUBDIRS([libs/libzrtp])
 fi
-AC_CONFIG_SUBDIRS([libs/libwebsockets])
 
 case $host in
    *-openbsd*)
